@@ -209,6 +209,7 @@ debbugs (2.4.2) UNRELEASED; urgency=low
     - Fix casing of versions (closes: #441022)
     - Output last-modified in bugreport.cgi (closes: #459709)
     - Fix various html syntax errors in pkgreport.cgi (closes: #462322)
+    - Make search case insensitive (closes: #448861)
 
   
  -- Colin Watson <cjwatson@debian.org>  Fri, 20 Jun 2003 18:57:25 +0100
